--- a/q1.html
+++ b/q1.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Because of a mistake, the following code colors the text in both divs. 
+    Fix the mistake so that the text is colored in only the 1st div. -->
 <style>
     #text-here{
     color: white;
