--- a/q1.html
+++ b/q1.html
@@ -14,7 +14,7 @@
 <body>
     <h1>Question 1</h1>
     <div id="text-here">Some interesting text</div>
-    <div id="text-here">More interesting text</div>
+    <div id="text-here2">More interesting text</div>
 
 </html>
 </body>
