--- a/q2.html
+++ b/q2.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <link rel="stylesheet" href="./styles.css">
 
 
 <head>
@@ -8,7 +9,11 @@ a form tag. Apply css formatting to change the background of the the paragraphs 
 Change the non-silver space around your paragraph to have a left and bottom margin equal to the height of a default character.
 -->
     <style>
-        /* Put your css here */
+        h2{
+        background-color: silver;
+        padding: 20px;
+        margin: .5em;
+            }
     </style>
 </head>
 
@@ -16,7 +21,7 @@ Change the non-silver space around your paragraph to have a left and bottom marg
 <body>
     <main>
         <h1>How the Action attribute works</h1>
-        <h2>... in my own words</h2>
+        <h2>The primary function of the "action" attribute is to define what action will be performed once the HTML form has been successfully submitted.</h2>
         <p></p>
     </main>
 </body>
