--- a/q3.html
+++ b/q3.html
@@ -16,6 +16,7 @@ display with 1:1 scale on a mobile device. -->
             border: 10px solid #f2f2f2;
         }
     </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 
@@ -35,6 +36,10 @@ display with 1:1 scale on a mobile device. -->
                     <div class="form-group">
                         <label for="email">Email Address</label>
                         <input class="form-control" id="email" type="email" name="Email">
+                    </div>
+                    <div class="form-group">
+                        <label for="topic">Topic</label>
+                        <input class="form-control" id="topic" type="topic" name="Topic">
                     </div>
                     <div class="form-group">
                         <label for="message">Message</label>
